--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="The Yearn Vault is a project archiving the texts you wish you received but never did." />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>The Yearn Vault</title>
-  </head>
-  <body>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#48598d" />
+    <meta name="description" content="The Yearn Vault is the void archiving the texts you wish you received but never did." />
+
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="The Yearn Vault">
+    <meta name="twitter:description" content="The Yearn Vault is the void archiving the texts you wish you received but never did.">
+    <meta name="twitter:image" content="%PUBLIC_URL%/icons/favicon-192x192.png">
+    
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="The Yearn Vault">
+    <meta property="og:image" content="%PUBLIC_URL%/icons/favicon-192x192.png">
+    <meta property="og:url" content="https://theyearnvault.com/">
+    <meta property="og:description" content="The Yearn Vault is the void archiving the texts you wish you received but never did.">
+
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/favicon-192x192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+</head>
+<body>
     <div id="root"></div>
-  </body>
+</body>
 </html>
