update icons and manifest

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -15,13 +15,13 @@
     
     <meta property="og:type" content="website">
     <meta property="og:title" content="The Yearn Vault">
-    <meta property="og:image" content="%PUBLIC_URL%/icons/favicon-192x192.png">
+    <meta property="og:image" content="/logo/favicon-192x192.png">
     <meta property="og:url" content="https://theyearnvault.com/">
     <meta property="og:description" content="The Yearn Vault is the void archiving the texts you wish you received but never did.">
 
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/favicon-192x192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="icon" href="/logo/favicon.ico" />
+    <link rel="apple-touch-icon" href="/logo/favicon-192x192.png" />
+    <link rel="manifest" href="/manifest.json" />
 </head>
 <body>
     <div id="root"></div>
