fix favicon url

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,7 +11,7 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="The Yearn Vault">
     <meta name="twitter:description" content="The Yearn Vault is the void archiving the texts you wish you received but never did.">
-    <meta name="twitter:image" content="%PUBLIC_URL%/icons/favicon-192x192.png">
+    <meta name="twitter:image" content="/logo/favicon-192x192.png">
     
     <meta property="og:type" content="website">
     <meta property="og:title" content="The Yearn Vault">
