--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -22,6 +22,8 @@
     <link rel="icon" href="/logo/favicon.ico" />
     <link rel="apple-touch-icon" href="/logo/favicon-192x192.png" />
     <link rel="manifest" href="/manifest.json" />
+
+    <script src="https://kit.fontawesome.com/a728e90e28.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div id="root"></div>
